# src/controller/user.controller.js
@@ -1,4 +1,3 @@
-const { to } = require('await-to-js')
 const userSvc = require("../services/user");
 
 async function fetch(req, res) {
@@ -11,14 +10,15 @@ async function fetch(req, res) {
 }
 async function getOne(req, res) {
   try {
-    const [err, data] = await to(userSvc.getOne(req.params.id))
-    if (err) {
-      throw new Error('Data tidak ditemukan!')
-    }
+    const data = await userSvc.getOne(req.params.id);
     res.send(data);
   } catch (error) {
-    if (error.message === 'Data tidak ditemukan!') {
+    if (error.message === 'Data tidak ditemukan') {
       res.status(404).send({
+        message: `${error.message}`
+      })
+    } else if (error.message === 'Data tidak ditemukan') {
+      res.status(401).send({
         message: `${error.message}`
       })
     } else {
@@ -34,11 +34,27 @@ async function create(req, res) {
     res.status(201).send(user);
   } catch (error) {
     if (error.message === 'Email sudah terdaftar') {
-      res.status(404).send({
+      res.status(409).send({
         message: `${error.message}`
       })
     } else if (error.message === 'Mobile phone sudah terdaftar') {
-      res.status(404).send({
+      res.status(409).send({
+        message: `${error.message}`
+      })
+    } else {
+      res.status(500).send({
+        message: `${error.message}`
+      })
+    }
+  }
+}
+async function login(req, res) {
+  try {
+    const user = await userSvc.login(req.body);
+    res.status(200).send(user);
+  } catch (error) {
+    if (error.message === 'Email dan password tidak benar') {
+      res.status(401).send({
         message: `${error.message}`
       })
     } else {
@@ -50,14 +66,19 @@ async function create(req, res) {
 }
 async function update(req, res) {
   try {
-    const [err, data] = await to(userSvc.update(req.body, req.params.id));
-    if (err) {
-      throw new Error('Data tidak ditemukan!')
-    }
+    const data = await userSvc.update(req.body, req.params.id);
     res.status(202).send(data);
   } catch (error) {
-    if (error.message === 'Data tidak ditemukan!') {
+    if (error.message === 'Data tidak ditemukan') {
       res.status(404).send({
+        message: `${error.message}`
+      })
+    } else if (error.message === 'Email sudah terdaftar') {
+      res.status(409).send({
+        message: `${error.message}`
+      })
+    } else if (error.message === 'Mobile phone sudah terdaftar') {
+      res.status(409).send({
         message: `${error.message}`
       })
     } else {
@@ -69,13 +90,10 @@ async function update(req, res) {
 }
 async function destroy(req, res) {
   try {
-    const [err, data] = await to(userSvc.destroy(req.params.id));
-    if (err) {
-      throw new Error('Data tidak ditemukan!')
-    }
-    res.status(204).send('Data telah dihapus');
+    const data = await userSvc.destroy(req.params.id);
+    res.status(204).send(data);
   } catch (error) {
-    if (error.message === 'Data tidak ditemukan!') {
+    if (error.message === 'Data tidak ditemukan') {
       res.status(404).send({
         message: `${error.message}`
       })
@@ -90,6 +108,7 @@ async function destroy(req, res) {
 module.exports = {
   fetch,
   getOne,
+  login,
   create,
   update,
   destroy,
