# src/models/user.js
@@ -1,5 +1,5 @@
-const mongoose = require("mongoose"); 
-
+const mongoose = require("mongoose");
+const bcrypt = require('bcrypt')
 const Schema = mongoose.Schema;
 
 var userSchema = new Schema({
@@ -29,7 +29,31 @@ var userSchema = new Schema({
     type: String,
     default: "user",
   },
+  cart: {
+    type: Array,
+    default: [],
+  },
+  address: {
+    type: String,
+  },
+  wishlist: [{ type: Schema.Types.ObjectId, ref: "Product" }],
+},
+  {
+    timestamps: true,
+  }
+);
+
+userSchema.pre("save", async function (next) {
+  if (!this.isModified("password")) {
+    next();
+  }
+  const salt = await bcrypt.genSaltSync(10);
+  this.password = await bcrypt.hash(this.password, salt);
+  next();
 });
+userSchema.methods.isPasswordMatched = async function (enteredPassword) {
+  return await bcrypt.compare(enteredPassword, this.password);
+};
 
 //Export the model
 const User = mongoose.model("User", userSchema);
